--- a/patient_list.html
+++ b/patient_list.html
@@ -16,10 +16,15 @@
         let highestPriority = null;
 
         document.addEventListener('DOMContentLoaded', () => {
+            fetchPatients();
+        });
+
+        function fetchPatients() {
             fetch('http://localhost:8001/api.php?action=getPatients')
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('patients-table-body');
+                    tableBody.innerHTML = '';
                     console.log(patientToTreat(data.patients));
                     highestPriority = data.patients[0];
                     data.patients.forEach(patient => {
@@ -37,8 +42,7 @@
                 .catch(error => {
                     console.error('Error fetching patients:', error);
                 });
-        });
-
+        }
 
         function patientToTreat(patients) {
             // Sort patients by severity and wait time
@@ -72,7 +76,6 @@
                 .then(data => {
                     if (data.valid) {
                         console.log("user removed");
-                        window.location.href = 'patient_list.html'; 
                     } else {
                         alert("Invalid.");
                     }
@@ -80,8 +83,10 @@
                 .catch(error => {
                     console.error('Error:', error);
                 });
-
+                fetchPatients();
             }
+
+            
         }
 
     </script>
